--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "multi-tenant",
+  "name": "express-mongoose-template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
