--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=mongodb://localhost:27017/fapi-db
+DATABASE_URL=mongodb+srv://abmeziane:ky1wV5DYOhrRIZjV@films.egl3klz.mongodb.net/films?retryWrites=true&w=majority
 PORT=3000
 TMDB_API_KEY=ebc38fcc6e66cce5cc1d1ad80be9cb5e
